--- a/assets/src/objects/_form.scss
+++ b/assets/src/objects/_form.scss
@@ -121,15 +121,15 @@
 
   .nf-error-msg {
     @extend %u-background-color-error;
+		@extend %u-error-padding;
 
     font-size: func.calc-rem(18px);
-    padding: func.calc-rem(5px) func.calc-rem(10px);
     margin-top: 1rem;
   }
 
   .nf-error-field-errors,
   .nf-response-msg {
-    @extend %u-error-padding;
+    @extend %u-notice-padding;
   }
 
   .nf-response-msg {
