--- a/assets/src/objects/_notice.scss
+++ b/assets/src/objects/_notice.scss
@@ -10,7 +10,7 @@
 
 .o-notice {
   @extend %u-border-radius-5;
-  @extend %u-error-padding;
+  @extend %u-notice-padding;
 
   &[data-type="error"] {
     @extend %u-background-color-error;
