--- a/assets/src/objects/_overlap.scss
+++ b/assets/src/objects/_overlap.scss
@@ -167,9 +167,9 @@
 .o-overlap-v__bg::after {
   @extend %u-content-empty;
   @extend %u-position-absolute;
-  @extend %u-bottom-0;
   @extend %u-left-0;
 
+	bottom: func.calc-rem(-1px);
   right: func.calc-rem(-10px);
   max-height: func.calc-rem(60px);
   min-height: func.calc-rem(45px);
