--- a/assets/src/utils/_classes.scss
+++ b/assets/src/utils/_classes.scss
@@ -132,7 +132,7 @@
     @extend %u-border-radius-100;
   }
 
-  .u-b-0 {
+  .u-brd-0 {
     border: 0;
   }
 
